<resources>
    <string name="app_name">Zenwood</string>
    <string name="enter_a_number_1_10">Enter a number 1-10</string>
    <string name="how_was_your_day">How was your day?</string>
    <string name="what_are_you_grateful_for">What are you grateful for?</string>
    <string name="write_your_entry_here">Write your entry here.</string>
    <string name="add">Add</string>
    <string name="what_emoji_best_describes_your_day">What emoji best describes your day?</string>
    <string name="update">Update</string>
    <string name="rating">Rating</string>
    <string name="first_line_of_entry">First Line of entry</string>
    <string name="edit_button">Edit button</string>
    <string name="edit">Edit</string>
    <string name="edit_button_text">edit</string>
    <string name="delete">Delete</string>
    <string name="this_is_a_new_entry_about_what_i_am_grateful_for">This is a new entry about what I am grateful for.</string>
    <string name="no_entries_to_display">No entries to display.</string>
    <string name="past_entries">Past Entries</string>
    <string name="add_entry">Add Entry</string>
    <string name="welcome_back_what_are_you_feeling_grateful_for_today">Welcome back! What are you feeling grateful for today?</string>
    <string name="last_update_date">Last Update Date</string>
    <string name="updated">Updated:</string>
    <string name="date">Date</string>
    <string name="created">Created:</string>
    <string name="emoji_1">Emoji 1</string>
    <string name="editbutton">EditButton</string>
    <string name="deletebutton">DeleteButton</string>
    <string name="back">Back</string>
    <string name="add_entry_title">Add Entry</string>
    <string name="edit_entry_title">edit_entry_title</string>
</resources>