<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomeBacklayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="20sp"
            android:fontFamily="sans-serif-light"
            android:text="@string/welcome_back_what_are_you_feeling_grateful_for_today"
            android:textAlignment="viewStart"
            android:textColor="#DFD6A8"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addEntryButton"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120sp"
            android:layout_marginTop="215sp"
            android:layout_marginEnd="20sp"
            android:onClick="goToAddEntryScreen"
            android:text="@string/add_entry"
            android:textColor="#DFD6A8" />

        <TextView
            android:id="@+id/pastEntriesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0sp"
            android:layout_marginTop="13sp"
            android:layout_marginRight="0sp"
            android:layout_marginBottom="20sp"
            android:background="#372A59"
            android:text="@string/past_entries"
            android:textAlignment="center"
            android:textColor="#867B98"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/noEntriesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_entries_to_display"
            android:textColor="#DFD6A8"
            android:textSize="24sp"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <ScrollView
            style="@android:style/Widget.Holo.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:fadingEdge="horizontal|vertical|none"
            android:requiresFadingEdge="vertical|none"
            android:scrollbarThumbVertical="@android:color/white">

            <include
                android:id="@id/content"
                layout="@layout/content_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

    </LinearLayout>
</LinearLayout>