<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="Date"
            android:textColor="#DFD6A8"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lastUpdateTextView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Last Update Date"
            android:textColor="#DFD6A8"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="247dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstLineTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_line_of_entry"
            android:textColor="#DFD6A8"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="57dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/editImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:autofillHints="edit"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/edit"
            android:focusable="true"
            app:srcCompat="@drawable/ic_edit" />

        <TextView
            android:id="@+id/ratingTextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/rating"
            android:textColor="#DFD6A8"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="59dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/emojiImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="8dp"
            android:src="@drawable/em_complicated" />

        <ImageView
            android:id="@+id/deleteImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:focusable="true"
            app:srcCompat="@drawable/ic_delete" />

    </LinearLayout>

</LinearLayout>